chore:Added image in comment
